--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ChallengeProject-e3b4c5e3-86f2-4cf2-bb0a-844dc75c516a;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-KH3FHOL\\SQLEXPRESS;Database=aspnet-ChallengeProject-e3b4c5e3-86f2-4cf2-bb0a-844dc75c516a;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True;"
   },
   "Logging": {
     "LogLevel": {
